# Quoniam-Nexus

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
apps/nexus-ui/: package-lock.json  package.json
apps/nexus-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/nexus-ui/src-tauri/src/: main.rs
apps/nexus-ui/web/: index.html  main.js  styles.css
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: daemon.rs  lib.rs  main.rs
crates/nexus-core/src/windows/: advanced_power.rs  cleaner.rs  cleanup.rs  debloat.rs  gpu.rs  memory.rs  mod.rs  monitor.rs  network.rs  permissions.rs  power.rs  startup.rs  system_tweaks.rs  updater.rs
