[workspace]
resolver = "2"
members = [
  "crates/nexus-core",
  "apps/nexus-ui/src-tauri"
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Quoniam Nexus Team"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
