[package]
name = "nexus-ui"
version = "0.1.0"
edition = "2021"
description = "Interface Tauri de Quoniam Nexus"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
nexus-core = { path = "../../../crates/nexus-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
