[package]
name = "nexus-ui"
version = "0.1.0"
edition = "2021"
description = "Interface Tauri de Quoniam Nexus"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde = "1.0"
serde_json.workspace = true
tauri = { version = "2", features = [] }
sysinfo = "0.30"
wmi = "0.13"
nexus-core = { path = "../../../crates/nexus-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
